# XMLplaylist

./: README.md  __init__.py  config.example.yaml  exporter.py  pyproject.toml  test_exporter.py  xml_export_lib.py
tests/: test_builder.py  test_cli.py  test_config.py  test_core.py  test_db.py  test_templates.py
xmlplaylist/: __init__.py  builder.py  cli.py  config.py  core.py  db.py
